[tool.poetry]
name = "django-lookups"
version = "0.1.0"
description = ""
authors = ["mistahchris <chris@thesogu.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = ">=1.11 <4"

[tool.poetry.dev-dependencies]
pytest = "~6.2"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
