[tool.poetry]
name = "django-lookups"
version = "0.1.3"
description = ""
authors = ["mistahchris <chris@thesogu.com>"]
license = "UNLICENSE"

readme = "README.md"
repository = "https://github.com/mistahchris/django_lookups"
homepage = "https://github.com/mistahchris/django_lookups"

keywords = ["django", "lookup table", "model"]

classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
Django = ">=1.11 <4"

[tool.poetry.dev-dependencies]
pytest = "~6.2"
pytest-django = "^4.1.0"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
force_sort_within_sections = true
include_trailing_comma = true
lines_after_imports = 2
line_length = 88
multi_line_output = 3
not_skip = "__init__.py"
known_first_party = "django_lookups"

[tool.black]
line-length = 88
