[tool.poetry]
name = "django-lookups"
version = "0.1.4"
description = ""
authors = ["mistahchris <chris@thesogu.com>"]
license = "UNLICENSE"

readme = "README.md"
repository = "https://github.com/mistahchris/django_lookups"
homepage = "https://github.com/mistahchris/django_lookups"

keywords = ["django", "lookup table", "model"]

classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6.1"
Django = ">=1.11, <4"

[tool.poetry.dev-dependencies]
pytest = "~6.2"
pytest-django = "^4.1.0"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
tox = "^3.20.1"
tox-poetry-installer = {extras = ["poetry"], version = "^0.6.0"}
tox-gh-actions = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
force_sort_within_sections = true
include_trailing_comma = true
lines_after_imports = 2
line_length = 88
multi_line_output = 3
not_skip = "__init__.py"
known_first_party = "django_lookups"

[tool.black]
line-length = 88

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py36-django{111,2,3}
    py37-django{111,2,3}
    py38-django{2,3}
    py39-django{2,3}
    flake8

isolated_build = true
skipdist = true

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39, flake8


[testenv]
whitelist_externals = poetry
locked_deps =
    black
    flake8
deps =
    django111: Django~=1.11
    django2: Django~=2.2
    django3: Django~=3.0

commands =
    poetry run pytest

[testenv:flake8]
skip_install = true
commands =
    flake8 --version
    flake8
"""